@@ -5,6 +5,7 @@ import com.biger.client.BigerClient;
 import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Fill in the section denoted by ***INPUT PARAMETERS*** with appropriate values before proceeding
@@ -15,7 +16,7 @@ public class OrderCancel {
 
         // ***INPUT PARAMETERS*** {
         String accessToken = "test2";
-        byte[] privateKey = Files.readAllBytes(Path.of(
+        byte[] privateKey = Files.readAllBytes(Paths.get(
                 System.getProperty("user.home"),
                 "privateKey"
         ));
